<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/sensors"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.001" />

        <Button
            android:id="@+id/proximityBtn"
            android:layout_width="425dp"
            android:layout_height="76dp"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="8dp"
            android:background="#b5ffe9"
            android:text="@string/proximityBtnText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.134" />


        <Button
            android:id="@+id/accelerometerBtn"
            android:layout_width="425dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="#b5ffe9"
            android:text="@string/accelerometerBtnText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.344" />

        <Button
            android:id="@+id/lightBtn"
            android:layout_width="425dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="#b5ffe9"
            android:text="@string/lightBtnText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476" />

        <Button
            android:id="@+id/GPSBtn"
            android:layout_width="425dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#b5ffe9"
            android:text="@string/GPSBtnText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.612" />

        <Button
            android:id="@+id/magnetometerBtn"
            android:layout_width="425dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#b5ffe9"
            android:text="@string/magnetometerBtnText"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.74" />

        <Button
            android:id="@+id/gyroBtn"
            android:layout_width="425dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#b5ffe9"
            android:text="Gyroscope"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.868" />


        <ImageView
            android:layout_width="150dp"
            android:layout_height="85dp"
            android:src="@drawable/ublogo"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-2dp" />


    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>